# docker-images

./: .gitignore
envoy-fast-api/: README.md
envoy-fast-api/app/: main.py  pyproject.toml
envoy-fast-api/docker/: Dockerfile  docker-compose.yml
envoy-fast-api/envoy/: envoy.yaml
fast-api-sample/: README.md  pyproject.toml
fast-api-sample/app/: main.py
fast-api-sample/app/api/: ping.py
fast-api-sample/docker/: Dockerfile  docker-compose.test.yml  docker-compose.yml
fast-api-sample/tests/: conftest.py
fast-api-sample/tests/api/: test_ping.py
fast-api-sample/tests/http/: test_main.http
poetry-private/: .dockerignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  tasks.py
python-boto3/: Dockerfile  README.md  docker-compose.yml  main.py
python-django/: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
python-django/composeexample/: middleware.py  settings.py  urls.py
python-django/sampleapp/: urls.py  views.py
python-django/sampleapp/migrations/: 0001_init_admin.py
python-django/sampleapp/templates/sampleapp/: index.html
python-django/staticfiles/: style.css
python-django/templates/: base.html  home.html
python-django/templates/registration/: password_change_form.html
python-tabcmd/: Dockerfile  README.md
python310-tabcmd/: Dockerfile  README.md  pyproject.toml
