[tool.poetry]
name = "fast-api-sample"
version = "0.1.0"
description = ""
authors = ["Yuki ASAKA <asa.ca3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.75.1"
uvicorn = {extras = ["standard"], version = "^0.17.6"}
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
yapf = "^0.32.0"
requests = "^2.28.1"
pytest-cov = "^3.0.0"
toml = "^0.10.2"

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
python_files = "test_*.py"
addopts = "-p no:warnings"

[tool.yapf]
based_on_style = "google"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
