[tool.poetry]
name = "app"
version = "0.1.0"
description = "private repository example"
authors = ["Yuki ASAKA <asaca3@gmail.com>"]

[[tool.poetry.source]]
name = "codeartifact"
url = "https://[domain]-[owner].d.codeartifact.[region].amazonaws.com/pypi/[repository]/simple"
secondary = true

[tool.poetry.dependencies]
python = "^3.9"
mydomain-common-lib = "^0.64.2"

[tool.poetry.dev-dependencies]
invoke = "^1.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
