[tool.poetry]
name = "python-django-example"
version = "1.0.0"
description = ""
authors = ["Yuki Asaka <asaca3@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.2"
psycopg2 = "^2.9.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
