[tool.poetry]
name = "python310-tabcmd"
version = "0.1.0"
description = ""
authors = ["Yuki ASAKA <asa.ca3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
tabcmd = {git = "https://github.com/tableau/tabcmd.git", rev = "development"}

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-mock = "^3.7.0"
yapf = "^0.32.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
